Resolves: tdf#90423 too risky to dlclose basctl once opened

Change-Id: I92c171b5900d770195bcad71a7df2a282649d479